--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "react-scripts": "2.1.8"
   },
   "dependencies": {
+    "firebase": "^5.8.6",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "react-router-dom": "^4.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
