--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   },
   "dependencies": {
     "@types/jest": "^24.0.11",
-    "@types/node": "^11.11.0",
+    "@types/node": "^11.11.1",
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
     "firebase": "^5.8.6",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
+    "recompose": "^0.30.0",
     "typescript": "^3.3.3333"
   },
   "scripts": {
