--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "@types/node": "^11.11.3",
     "react-scripts": "2.1.8"
   },
   "dependencies": {
+    "@types/history": "^4.7.2",
     "@types/jest": "^24.0.11",
-    "@types/node": "^11.11.1",
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
     "firebase": "^5.8.6",
